aws-terraform-v1/security_groups.tf
resource "aws_security_group" "MyWebServerSeqGrp" {
  name        = "MyWebServerSeqGrp"
  description = "Allow MyWebServerSeqGrp"
  vpc_id      = aws_vpc.MyVpc.id

  ingress {
    description      = "ssh from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [aws_vpc.MyVpc.cidr_block]
    
  }

  ingress {
    description      = "http from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = [aws_vpc.MyVpc.cidr_block]
    
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }


  tags = {
    "Name" = "MyWebServerSeqGrp"
  }
}
